add indexing to search
